<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/background"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.user10.keerat.activity.activity.SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/splash"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/et_setemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="24dp"
        android:textColor="#F4511E"
        android:isScrollContainer="false"
       android:background="@drawable/rounded_edittext"
        android:hint="@string/setemail"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="#80fe7a47"
        android:textSize="14sp" />


        <EditText
            android:id="@+id/et_mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:hint="Mobile No."
            android:inputType="number"
            android:padding="15dp"
            android:textColor="#F4511E"
            android:isScrollContainer="false"
            android:textColorHint="#80fe7a47"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_setpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:textColor="#F4511E"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/setpassword"
            android:inputType="textPassword"
            android:isScrollContainer="false"
            android:padding="15dp"
            android:textColorHint="#80fe7a47"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/et_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:textColor="#F4511E"
            android:background="@drawable/rounded_edittext"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:isScrollContainer="false"
            android:padding="15dp"
            android:textColorHint="#80fe7a47"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/et_refernce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/reference"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="#F4511E"
            android:isScrollContainer="false"
            android:textColorHint="#80fe7a47"
            android:textSize="14sp"/>

    <Button

        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="111dp"
        android:layout_marginTop="24dp"
       android:background="@drawable/rounded_edittext"
        android:padding="15dp"
        android:text="@string/signup"
        android:layout_marginBottom="20dp"
        android:textColor="#fe7a47"
        android:textSize="14sp" />

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center_horizontal"
        >

        <View
            android:layout_width="90dp"
            android:layout_height="2dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:background="@color/hintcolor" />

        <TextView
            android:id="@+id/tv_loginwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/loginwith"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="31dp"
            android:layout_marginTop="28dp"
            android:background="@color/hintcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:background="@drawable/btn_facebook"
            android:text="@string/facebook"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:padding="15dp"
            android:text="@string/google"
            android:textColor="#d0021b"
            android:textSize="14sp" />
    </LinearLayout>
-->


</LinearLayout>
    </ScrollView>
    </LinearLayout>


